--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,6 +72,10 @@ nav li a{
     font-size: 20px;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* header */
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -112,12 +116,17 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* about styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 
 }
 
@@ -128,4 +137,16 @@ main{
 
 .item-description{
     font-weight: 600;
+}
+
+/* skills section styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
